--- a/index.html
+++ b/index.html
@@ -36,60 +36,122 @@
     </svg>
     <div class="gallery-preview">
       <div class="slide" id="slide1">
-        <img class="mobile" src="img/blonde-salad.jpg">
+        <img class="mobile" src="img/blonde-salad-1.jpg">
         <img class="tablet" src="img/blonde-salad-t.jpg">
         <img class="dekstop" src="img/blonde-salad-d.jpg">
+        <div class="slide-inside">
+          <img src="img/blonde/blonde-salad-sunglasses.png" alt="sunglasses">
+          <img src="img/blonde/sale.jpg" alt="sale">
+          <img src="img/blonde/shoot.jpg" alt="shoot">
+          <video controls muted>
+          <source type="video/mp4" src="img/blonde/senso-shoes.mp4">
+            </video>
+          <img src="img/blonde/rpcave.png" alt="email-invite">
+          <img src="img/blonde/lastCall.png" alt="Sale last call banner">
+          <img src="img/blonde/superga.jpg" alt="Superga shoes packaging">
+          <img src="img/blonde/supergaUp.jpg" alt="Superga shoes packaging">
+          <img src="img/blonde/blonde-missoni.jpg" alt="Missoni for The Blonde Salad">
+          <img src="img/blonde-salad-d.jpg" alt="Shooting editorial The Blonde Salad">
+        </div>
       </div>
       <div class="slide" id="slide2">
         <img class="mobile" src="img/rationale.jpg">
         <img class="tablet" src="img/rationale-t.jpg">
         <img class="dekstop" src="img/rationale-d.jpg">
+        <div class="slide-inside">
+        <img src="img/rationale/rationale-n.png" alt="Rationale pack">
+        <img src="img/rationale/rationale-pack-n.png" alt="Rationale pack">
+        <img src="img/rationale/rationale-card2-n.png" alt="Rationale card ">
+        <img src="img/rationale/rationale-bag-n.png" alt="Rationale bags">
+        <img src="img/rationale/rationale-menu-n.png" alt="Rationale menu">
+        <img src="img/rationale/rationale-coaster-n.png" alt="Rationale coaster">
+        </div>
       </div>
       <div class="slide" id="slide3">
         <img class="mobile" src="img/fitbit.jpg">
         <img class="tablet" src="img/fitbit-t.jpg">
         <img class="dekstop" src="img/fitbit-d.jpg">
+        <div class="slide-inside">
+          <video controls loop muted>
+            <source type="video/mp4" src="img/fitbit/loveIsLoveB.mp4">
+          </video>
+          <video controls loop muted>
+            <source type="video/mp4" src="img/fitbit/loveIsLoveG.mp4">
+          </video>
+          <video controls loop muted>
+            <source type="video/mp4" src="img/fitbit/loveIsLoveL.mp4">
+          </video>
+        </div>
       </div>
       <div class="slide" id="slide4">
         <img class="mobile" src="img/roche.jpg">
         <img class="tablet" src="img/roche-t.jpg">
         <img class="dekstop" src="img/roche-d.jpg">
+        <div class="slide-inside">
+          <img src="img/blonde/blonde-salad-sunglasses.png" alt="sunglasses">
+          <img src="img/blonde/sale.jpg" alt="sale">
+          <img src="img/blonde/shoot.jpg" alt="shoot">
+        </div>
       </div>
       <div class="slide" id="slide5">
         <img class="mobile" src="img/sidequest.jpg">
         <img class="tablet" src="img/sidequest-t.jpg">
         <img class="dekstop" src="img/sidequest-d.jpg">
+        <div class="slide-inside">
+          <img src="img/sidequest/sidequest-hylia-asset-n.png" alt="Asset Hylia by Sidequest">
+          <img src="img/sidequest/HyliaStories.jpg" alt="Hylia by Sandrod Stories">
+          <img alt="Hylia by Sidequest Album" src="img/sidequest/hyliaAlbum.jpg">
+          <img src="img/sidequest/sidequestSandrodAsset.png" alt="Asset Sandrod by Sidequest">
+          <img alt="Sandrod by Sidequest Stories" src="img/sidequest/sandrodStories.jpg">
+          <img alt="Sandrod by Sidequest Album" src="img/sidequest/sandrodAlbum.jpg">
+        </div>
       </div>
       <div class="slide" id="slide6">
         <img class="mobile" src="img/photo.jpg">
-        <img class="tablet" src="img/photo-t.jpg">
+        <img class="tablet" src="img/photography-t.jpg">
         <img class="dekstop" src="img/photo-d.jpg">
+        <div class="slide-inside">
+          <img src="img/photo/karlsruhe.jpg" alt="Karlsruhe">
+          <img src="img/photo/prada.jpg" alt="sale">
+          <img src="img/photo/karlsruhe2.jpg" alt="shoot">
+          <img src="img/photo/riff.jpg" alt="shoot">
+          <img src="img/photo/stazioneCentrale.jpg" alt="Stazione Centrale Milano">
+          <img src="img/photo/hangar-bicocca.jpg" alt="Hangar Bicocca Milano">
+          <img alt="NABA Shooting" src="img/photo/photo-t.jpg">
+        </div>
     </div>
     </div>
     <div class="section"><span>projects</span><span>readings</span>
     </div>
     <div class="gallery-title">
+      <a class="arrow-down-close" onclick="openDropDown(), callback()"></a>
         <div class="gallery-title-main"></div>
         <div class="gallery-title-tag"></div>
         <div class="gallery-title-preview">
           <div class="gallery-title-preview-inside">
             <a class="dot" href="#slide1">
-              <img src="img/blonde-salad-mini.jpg" alt="The Blonde Salad">
+              <img class="mini" src="img/blonde-salad-mini.jpg" alt="The Blonde Salad">
+              <img class="mini-tablet" src="img/blonde-salad-mini-t.jpg" alt="The Blonde Salad">
             </a>
             <a class="dot" href="#slide2">
-          <img href="#slide2" src="img/rationale-mini.jpg" alt="Rationale Coffee Roaster">
+          <img class="mini" href="#slide2" src="img/rationale-mini.jpg" alt="Rationale Coffee Roaster">
+          <img class="mini-tablet" href="#slide2" src="img/rationale-mini-t.png" alt="Rationale Coffee Roaster">
             </a>
             <a class="dot" href="#slide3">
-          <img src="img/fitbit-mini.jpg" alt="Fitbit">
+          <img class="mini" src="img/fitbit-mini.jpg" alt="Fitbit">
+          <img class="mini-tablet" src="img/fitbit-mini-t.jpg" alt="Fitbit">
             </a>
             <a class="dot" href="#slide4">
-              <img src="img/roche-mini.jpg" alt="Roche">
+              <img class="mini" src="img/roche-mini.jpg" alt="Roche">
+              <img class="mini-tablet" src="img/roche-mini-t.jpg" alt="Roche">
             </a>
             <a class="dot" href="#slide5">
-          <img src="img/sidequest-mini.jpg" alt="Sidequest">
+          <img class="mini" src="img/sidequest-mini.jpg" alt="Sidequest">
+          <img class="mini-tablet" src="img/sidequest-mini-t.jpg" alt="Sidequest">
             </a>
             <a class="dot" href="#slide6">
-          <img src="img/photography-mini.jpg" alt="Photography">
+          <img class="mini" src="img/photography-mini.jpg" alt="Photography">
+          <img class="mini-tablet" href="#slide6" src="img/photography-mini-t.jpg" alt="Rationale Coffee Roaster">
             </a>
         </div>
         </div>
