--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       </div>
       <div class="dropdown-menu">
         <ul class="submenu">
-          <li><a class="social" id="linkedin"><img alt="linkedin" src="img/social-l.png"></a></li>
-          <li><a class="social" id="instagram"><img alt="instagram" src="img/social-ig.png"></a></li>
-          <li><a class="social" id="reddit"><img alt="reddit" src="img/social-r.png"></a></li>
+          <li><a class="social" id="linkedin" href="https://www.linkedin.com/in/andrea-denigri-752b25125/?originalSubdomain=it"><img alt="linkedin" src="img/social-l.png"></a></li>
+          <li><a class="social" id="instagram" href="https://www.instagram.com/franco_furto/"><img alt="instagram" src="img/social-ig.png"></a></li>
+          <li><a class="social" id="reddit" ><img alt="reddit" src="img/social-r.png"></a></li>
         </ul>
       </div>
     </header>
@@ -38,7 +38,7 @@
       <div class="slide" id="slide1">
         <img class="mobile" src="img/blonde-salad-1.jpg">
         <img class="tablet" src="img/blonde-salad-t.jpg">
-        <img class="dekstop" src="img/blonde-salad-d.jpg">
+        <img class="desktop" src="img/blonde-salad-d-1.jpg">
         <div class="slide-inside">
           <img src="img/blonde/blonde-salad-sunglasses.png" alt="sunglasses">
           <img src="img/blonde/sale.jpg" alt="sale">
@@ -57,7 +57,7 @@
       <div class="slide" id="slide2">
         <img class="mobile" src="img/rationale.jpg">
         <img class="tablet" src="img/rationale-t.jpg">
-        <img class="dekstop" src="img/rationale-d.jpg">
+        <img class="desktop" src="img/rationale-d.jpg">
         <div class="slide-inside">
         <img src="img/rationale/rationale-n.png" alt="Rationale pack">
         <img src="img/rationale/rationale-pack-n.png" alt="Rationale pack">
@@ -70,7 +70,7 @@
       <div class="slide" id="slide3">
         <img class="mobile" src="img/fitbit.jpg">
         <img class="tablet" src="img/fitbit-t.jpg">
-        <img class="dekstop" src="img/fitbit-d.jpg">
+        <img class="desktop" src="img/fitbit-d.jpg">
         <div class="slide-inside">
           <video controls loop muted>
             <source type="video/mp4" src="img/fitbit/loveIsLoveB.mp4">
@@ -86,7 +86,7 @@
       <div class="slide" id="slide4">
         <img class="mobile" src="img/roche.jpg">
         <img class="tablet" src="img/roche-t.jpg">
-        <img class="dekstop" src="img/roche-d.jpg">
+        <img class="desktop" src="img/roche-d.jpg">
         <div class="slide-inside">
           <img src="img/blonde/blonde-salad-sunglasses.png" alt="sunglasses">
           <img src="img/blonde/sale.jpg" alt="sale">
@@ -96,7 +96,7 @@
       <div class="slide" id="slide5">
         <img class="mobile" src="img/sidequest.jpg">
         <img class="tablet" src="img/sidequest-t.jpg">
-        <img class="dekstop" src="img/sidequest-d.jpg">
+        <img class="desktop" src="img/sidequest-d.jpg">
         <div class="slide-inside">
           <img src="img/sidequest/sidequest-hylia-asset-n.png" alt="Asset Hylia by Sidequest">
           <img src="img/sidequest/HyliaStories.jpg" alt="Hylia by Sandrod Stories">
@@ -109,7 +109,7 @@
       <div class="slide" id="slide6">
         <img class="mobile" src="img/photo.jpg">
         <img class="tablet" src="img/photography-t.jpg">
-        <img class="dekstop" src="img/photo-d.jpg">
+        <img class="desktop" src="img/photo-d.jpg">
         <div class="slide-inside">
           <img src="img/photo/karlsruhe.jpg" alt="Karlsruhe">
           <img src="img/photo/prada.jpg" alt="sale">
@@ -124,9 +124,11 @@
     <div class="section"><span>projects</span><span>readings</span>
     </div>
     <div class="gallery-title">
-      <a class="arrow-down-close" onclick="openDropDown(), callback()"></a>
-        <div class="gallery-title-main"></div>
+      <div class="description"> 
+      <div class="gallery-title-main"></div>
         <div class="gallery-title-tag"></div>
+        <a class="arrow-down-close" onclick="openDropDown(), callback()"></a>
+      </div>
         <div class="gallery-title-preview">
           <div class="gallery-title-preview-inside">
             <a class="dot" href="#slide1">
