--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </svg>
     <div class="gallery-preview">
       <div class="slide" id="slide1">
-        <img class="mobile" src="img/blonde-salad-1.jpg">
+        <img class="mobile" src="img/blonde-salad-gradient.jpg">
         <img class="tablet" src="img/blonde-salad-t.jpg">
         <img class="desktop" src="img/blonde-salad-d-1.jpg">
         <div class="slide-inside">
@@ -55,7 +55,7 @@
         </div>
       </div>
       <div class="slide" id="slide2">
-        <img class="mobile" src="img/rationale.jpg">
+        <img class="mobile" src="img/rationale-gradient.jpg">
         <img class="tablet" src="img/rationale-t.jpg">
         <img class="desktop" src="img/rationale-d.jpg">
         <div class="slide-inside">
@@ -68,7 +68,7 @@
         </div>
       </div>
       <div class="slide" id="slide3">
-        <img class="mobile" src="img/fitbit.jpg">
+        <img class="mobile" src="img/fitbit-gradient.jpg">
         <img class="tablet" src="img/fitbit-t.jpg">
         <img class="desktop" src="img/fitbit-d.jpg">
         <div class="slide-inside">
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="slide" id="slide4">
-        <img class="mobile" src="img/roche.jpg">
+        <img class="mobile" src="img/roche-gradient.jpg">
         <img class="tablet" src="img/roche-t.jpg">
         <img class="desktop" src="img/roche-d.jpg">
         <div class="slide-inside">
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="slide" id="slide5">
-        <img class="mobile" src="img/sidequest.jpg">
+        <img class="mobile" src="img/sidequest-gradient.jpg">
         <img class="tablet" src="img/sidequest-t.jpg">
         <img class="desktop" src="img/sidequest-d.jpg">
         <div class="slide-inside">
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="slide" id="slide6">
-        <img class="mobile" src="img/photo.jpg">
+        <img class="mobile" src="img/photo-gradient.jpg">
         <img class="tablet" src="img/photography-t.jpg">
         <img class="desktop" src="img/photo-d.jpg">
         <div class="slide-inside">
@@ -121,41 +121,28 @@
         </div>
     </div>
     </div>
-    <div class="section"><span>projects</span><span>readings</span>
-    </div>
     <div class="gallery-title">
       <div class="description"> 
       <div class="gallery-title-main"></div>
         <div class="gallery-title-tag"></div>
         <a class="arrow-down-close" onclick="openDropDown(), callback()"></a>
       </div>
-        <div class="gallery-title-preview">
-          <div class="gallery-title-preview-inside">
-            <a class="dot" href="#slide1">
-              <img class="mini" src="img/blonde-salad-mini.jpg" alt="The Blonde Salad">
-              <img class="mini-tablet" src="img/blonde-salad-mini-t.jpg" alt="The Blonde Salad">
-            </a>
-            <a class="dot" href="#slide2">
-          <img class="mini" href="#slide2" src="img/rationale-mini.jpg" alt="Rationale Coffee Roaster">
-          <img class="mini-tablet" href="#slide2" src="img/rationale-mini-t.png" alt="Rationale Coffee Roaster">
-            </a>
-            <a class="dot" href="#slide3">
-          <img class="mini" src="img/fitbit-mini.jpg" alt="Fitbit">
-          <img class="mini-tablet" src="img/fitbit-mini-t.jpg" alt="Fitbit">
-            </a>
-            <a class="dot" href="#slide4">
-              <img class="mini" src="img/roche-mini.jpg" alt="Roche">
-              <img class="mini-tablet" src="img/roche-mini-t.jpg" alt="Roche">
-            </a>
-            <a class="dot" href="#slide5">
-          <img class="mini" src="img/sidequest-mini.jpg" alt="Sidequest">
-          <img class="mini-tablet" src="img/sidequest-mini-t.jpg" alt="Sidequest">
-            </a>
-            <a class="dot" href="#slide6">
-          <img class="mini" src="img/photography-mini.jpg" alt="Photography">
-          <img class="mini-tablet" href="#slide6" src="img/photography-mini-t.jpg" alt="Rationale Coffee Roaster">
-            </a>
+        <div class="dots">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
         </div>
+        <div class="categories">
+          <span style="background-color: rgba(34,34,33,1);color: hsl(59,100%,80%)">Projects</span>
+          <span>Readings</span>
+          <span>Contacts</span>
+          <span>About</span>
+        </div>
+        <div class="categories-projects">
+
         </div>
               </div>
   </div>
