--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta charset="UTF-8">
 </head>
 <body>
+  <div class="container-in">
   <div class="container">
     <header id="header">
       <div class="arrow" onclick="dropDown()">
@@ -145,6 +146,7 @@
 
         </div>
               </div>
+  </div>
   </div>
 </body>
 <script src="./script.js" type="text/javascript"></script>
