--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@
           <div></div>
         </div>
         <div class="categories">
-          <span style="background-color: rgba(34,34,33,1);color: hsl(59,100%,80%)">Projects</span>
-          <span>Readings</span>
-          <span>Contacts</span>
+          <span style="color: hsl(59,100%,80%);">Projects</span>
           <span>About</span>
+          <span>Contacts</span>
         </div>
         <div class="categories-projects">
 
