--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           <div></div>
         </div>
         <div class="categories">
-          <span style="color: hsl(59,100%,80%);">Projects</span>
+          <span style="color: rgb(34,34,33);">Projects</span>
           <span>About</span>
           <span>Contacts</span>
         </div>
