--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </svg>
     <div class="gallery-preview">
       <div class="slide" id="slide1">
-        <img class="mobile" src="img/blonde-salad-gradient.jpg">
+        <img class="mobile" src="img/blonde-salad.jpg">
         <img class="tablet" src="img/blonde-salad-t.jpg">
         <img class="desktop" src="img/blonde-salad-d-1.jpg">
         <div class="slide-inside">
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="slide" id="slide2">
-        <img class="mobile" src="img/rationale-gradient.jpg">
+        <img class="mobile" src="img/rationale.jpg">
         <img class="tablet" src="img/rationale-t.jpg">
         <img class="desktop" src="img/rationale-d.jpg">
         <div class="slide-inside">
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="slide" id="slide3">
-        <img class="mobile" src="img/fitbit-gradient.jpg">
+        <img class="mobile" src="img/fitbit.jpg">
         <img class="tablet" src="img/fitbit-t.jpg">
         <img class="desktop" src="img/fitbit-d.jpg">
         <div class="slide-inside">
@@ -85,7 +85,7 @@
         </div>
       </div>
       <div class="slide" id="slide4">
-        <img class="mobile" src="img/roche-gradient.jpg">
+        <img class="mobile" src="img/roche.jpg">
         <img class="tablet" src="img/roche-t.jpg">
         <img class="desktop" src="img/roche-d.jpg">
         <div class="slide-inside">
@@ -95,7 +95,7 @@
         </div>
       </div>
       <div class="slide" id="slide5">
-        <img class="mobile" src="img/sidequest-gradient.jpg">
+        <img class="mobile" src="img/sidequest.jpg">
         <img class="tablet" src="img/sidequest-t.jpg">
         <img class="desktop" src="img/sidequest-d.jpg">
         <div class="slide-inside">
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="slide" id="slide6">
-        <img class="mobile" src="img/photo-gradient.jpg">
+        <img class="mobile" src="img/photo.jpg">
         <img class="tablet" src="img/photography-t.jpg">
         <img class="desktop" src="img/photo-d.jpg">
         <div class="slide-inside">
