--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </svg>
     <div class="gallery-preview">
       <div class="slide" id="slide1">
-        <img class="mobile" src="img/blonde-salad.jpg">
+        <img class="mobile" src="img/blonde-salad-1.jpg">
         <img class="tablet" src="img/blonde-salad-t.jpg">
         <img class="desktop" src="img/blonde-salad-d-1.jpg">
         <div class="slide-inside">
