--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
           <div></div>
         </div>
         <div class="categories">
-          <span style="color: rgb(34,34,33);">Projects</span>
-          <span>About</span>
-          <span>Contacts</span>
+          <span id="projects">Projects</span>
+          <span id="about">About</span>
+          <span id="contacts">Contacts</span>
         </div>
         <div class="categories-projects">
 
