--- a/index.html
+++ b/index.html
@@ -10,17 +10,6 @@
 </head>
 <body>
   <div class="container">
-    <header id="header">
-      <div class="arrow" onclick="dropDown()">
-      </div>
-      <div class="dropdown-menu">
-        <ul class="submenu">
-          <li><a class="social" id="linkedin" href="https://www.linkedin.com/in/andrea-denigri-752b25125/?originalSubdomain=it"><img alt="linkedin" src="img/social-l.png"></a></li>
-          <li><a class="social" id="instagram" href="https://www.instagram.com/franco_furto/"><img alt="instagram" src="img/social-ig.png"></a></li>
-          <li><a class="social" id="reddit" ><img alt="reddit" src="img/social-r.png"></a></li>
-        </ul>
-      </div>
-    </header>
     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 85.15 37.52">
       <path id="ombra" d="M68.21,2A17.93,17.93,0,1,0,86.14,19.91,17.95,17.95,0,0,0,68.21,2Z" transform="translate(-0.99 -0.33)" style="fill:#222221"/>
@@ -35,6 +24,39 @@
       <path id="palp-2" data-name="palp" d="M36.62,18.5a17.56,17.56,0,0,0-35.11,0Z" transform="translate(-0.99 -0.33)" style="fill:#ff0;stroke:#222221;stroke-miterlimit:10;stroke-width:1.0519236510025882px"/>
     </svg>
     <div class="gallery-preview">
+      <div class="about">
+        <h1>Bio</h1>
+        <p>I like abstractions, I write to understand. Sometimes I code. My main interests are into technology, critical thinking, motion, photography, Arts.</p>
+        <h1>Experience</h1>
+        <div class="exp">
+            <span>Nov 2018 - Nov 2019</span>
+            <ul class="work">
+                <li>Art Director</li>
+                <li>Omnicom Pr Group</li>
+            </ul>
+        </div>
+        <div class="exp">
+            <span>Jan 2017 - Jun 2017</span>
+            <ul class="work">
+                <li>Visual Designer</li>
+                <li>The Blonde Salad</li>
+            </ul>
+        </div>
+        <div class="exp">
+            <span>Oct 2016</span>
+            <ul class="work">
+                <li>Volunteer</li>
+                <li>TEDXMilano</li>
+            </ul>
+        </div><div class="dropdown-menu">
+        <ul class="submenu">
+          <li><a class="social" id="linkedin" href="https://www.linkedin.com/in/andrea-denigri-752b25125/?originalSubdomain=it"><img alt="linkedin" src="img/social-l.png"></a></li>
+          <li><a class="social" id="instagram" href="https://www.instagram.com/franco_furto/"><img alt="instagram" src="img/social-ig.png"></a></li>
+          <li><a class="social" id="reddit"><img alt="reddit" src="img/social-r.png"></a></li>
+        </ul>
+      </div>
+    
+    </div>
       <div class="slide" id="slide1">
         <img class="mobile" src="img/blonde-salad-1.jpg">
         <img class="tablet" src="img/blonde-salad-t.jpg">
