--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <path id="palpdown-2" data-name="palpdown" d="M5.43,29.57a17.54,17.54,0,0,0,27.28,0Z" transform="translate(-0.99 -0.33)" style="fill:#ff0;stroke:#222221;stroke-miterlimit:10;stroke-width:1.0519236510025882px"/>
       <path id="palp-2" data-name="palp" d="M36.62,18.5a17.56,17.56,0,0,0-35.11,0Z" transform="translate(-0.99 -0.33)" style="fill:#ff0;stroke:#222221;stroke-miterlimit:10;stroke-width:1.0519236510025882px"/>
     </svg>
-    <div class="gallery-preview">
-      <div class="about">
+    <div class="about">
         <h1>Bio</h1>
         <p>I like abstractions, I write to understand. Sometimes I code. My main interests are into technology, critical thinking, motion, photography, Arts.</p>
         <h1>Experience</h1>
@@ -48,15 +47,16 @@
                 <li>Volunteer</li>
                 <li>TEDXMilano</li>
             </ul>
-        </div><div class="dropdown-menu">
+        </div>
+      <div class="dropdown-menu">
         <ul class="submenu">
           <li><a class="social" id="linkedin" href="https://www.linkedin.com/in/andrea-denigri-752b25125/?originalSubdomain=it"><img alt="linkedin" src="img/social-l.png"></a></li>
           <li><a class="social" id="instagram" href="https://www.instagram.com/franco_furto/"><img alt="instagram" src="img/social-ig.png"></a></li>
           <li><a class="social" id="reddit"><img alt="reddit" src="img/social-r.png"></a></li>
         </ul>
       </div>
-    
     </div>
+    <div class="gallery-preview">
       <div class="slide" id="slide1">
         <img class="mobile" src="img/blonde-salad-1.jpg">
         <img class="tablet" src="img/blonde-salad-t.jpg">
