--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
     </div>
     <div class="gallery-title">
       <div class="description"> 
+        <div>
       <div class="gallery-title-main"></div>
         <div class="gallery-title-tag"></div>
+        </div>
         <a class="arrow-down-close" onclick="openDropDown(), callback()"></a>
       </div>
         <div class="dots">
