--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="gallery-preview">
       <div class="about">
         <h1>Bio</h1>
-        <p>I like abstractions, I write to understand. Sometimes I code. My main interests are into technology, critical thinking, motion, photography, Arts.</p>
+        <p>I like abstractions, I write to understand. Sometimes I code. My main interests are into Branding, motion, Technology, critical thinking, photography, Arts.</p>
         <h1>Experience</h1>
         <div class="exp">
             <span>Nov 2018 - Nov 2019</span>
@@ -53,7 +53,6 @@
         <ul class="submenu">
           <li><a class="social" id="linkedin" href="https://www.linkedin.com/in/andrea-denigri-752b25125/?originalSubdomain=it"><img alt="linkedin" src="img/social-l.png"></a></li>
           <li><a class="social" id="instagram" href="https://www.instagram.com/franco_furto/"><img alt="instagram" src="img/social-ig.png"></a></li>
-          <li><a class="social" id="reddit"><img alt="reddit" src="img/social-r.png"></a></li>
         </ul>
       </div>
     </div>
