--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <path id="palp-2" data-name="palp" d="M36.62,18.5a17.56,17.56,0,0,0-35.11,0Z" transform="translate(-0.99 -0.33)" style="fill:#ff0;stroke:#222221;stroke-miterlimit:10;stroke-width:1.0519236510025882px"/>
     </svg>
     <div class="gallery-preview">
-      <div class="about">
+      <div id="about-fixed" class="about">
         <h1>Bio</h1>
         <p>I like abstractions, I write to understand. Sometimes I code. My main interests are into Branding, motion, Technology, critical thinking, photography, Arts.</p>
         <h1>Experience</h1>
