--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
         <div>
       <div class="gallery-title-main"></div>
         <div class="gallery-title-tag"></div>
+        <div class="gallery-title-paragraph"></div>
         </div>
         <a class="arrow-down-close" onclick="openDropDown(), callback()"></a>
       </div>
@@ -161,9 +162,6 @@
         <div class="categories">
           <span id="projects">Projects</span>
           <span id="about">About</span>
-        </div>
-        <div class="categories-projects">
-
         </div>
               </div>
   </div>
