--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <img src="img/blonde/blonde-salad-sunglasses.png" alt="sunglasses">
           <img src="img/blonde/sale.jpg" alt="sale">
           <img src="img/blonde/shoot.jpg" alt="shoot">
-          <video controls muted>
+          <video controls loop muted>
           <source type="video/mp4" src="img/blonde/senso-shoes.mp4">
             </video>
           <img src="img/blonde/rpcave.png" alt="email-invite">
